--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "pyquant"
+name = "python_quant"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
