--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,21 @@
 [project]
-name = "python_quant"
-version = "0.1.0"
+name = "python-quant"
+version = "0.1.4"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "numpy>=2.3.4",
-    "pandas>=2.3.3",
-    "polars>=1.35.2",
-    "scipy>=1.16.3",
-    "sympy>=1.14.0",
+    "mpmath==1.3.0",
+    "numpy==2.3.4",
+    "pandas==2.3.3",
+    "polars==1.35.2",
+    "polars-runtime-32==1.35.2",
+    "python-dateutil==2.9.0.post0",
+    "pytz==2025.2",
+    "scipy==1.16.3",
+    "six==1.17.0",
+    "sympy==1.14.0",
+    "tzdata==2025.2",
 ]
+[project.scripts]
+python_quant = "python_quant.main:main"
