--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ __pycache__/
 # C extensions
 *.so
 
+# Output CSV files
+output.csv
+
 # Distribution / packaging
 .Python
 build/
@@ -169,3 +172,4 @@ poetry.toml
 
 # LSP config files
 pyrightconfig.json
+
