--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "python-quant"
-version = "0.1.6"
-description = "Add your description here"
-readme = "README.md"
+version = "0.1.7"
+description = "Quantitative Finance Library in Python"
+readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.12"
 dependencies = [
     "mpmath==1.3.0",
