--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "polars-runtime-32",
     "python-dateutil",
     "pytz",
+    "ruff>=0.14.6",
     "scipy",
     "six",
     "sympy",
